--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "devDependencies": {
         "@types/assert": "^1.5.6",
-        "@types/mocha": "^10.0.0"
+        "@types/mocha": "^10.0.0",
+        "@types/node": "^18.11.9"
     }
 }
