--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.2.2",
   "type": "module",
   "description": "A Node package to publish notifications to an ntfy server.",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "exports": "./index.js",
   "scripts": {
     "test": "mocha",
@@ -25,12 +28,10 @@
     "url": "https://github.com/cityssm/node-ntfy-publish/issues"
   },
   "homepage": "https://github.com/cityssm/node-ntfy-publish#readme",
-  "dependencies": {
-    "node-fetch": "^3.3.1"
-  },
   "devDependencies": {
-    "@types/assert": "^1.5.6",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.15.11"
+    "@types/assert": "^1.5.10",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.0",
+    "eslint-config-cityssm": "^1.1.1"
   }
 }
