--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
-    "compilerOptions": {
-        "target": "es2017",
-        "module": "es2022",
-        "moduleResolution": "Node",
-        "isolatedModules": false,
-        "declaration": true,
-        "noImplicitAny": false,
-        "removeComments": true,
-        "allowUnreachableCode": false,
-        "allowSyntheticDefaultImports": true,
-        "resolveJsonModule": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true
-    },
-    "compileOnSave": true,
-    "buildOnSave": true
+  "compilerOptions": {
+    "target": "es2022",
+    "module": "es2022",
+    "moduleResolution": "Node",
+    "isolatedModules": false,
+    "declaration": true,
+    "noImplicitAny": false,
+    "removeComments": true,
+    "allowUnreachableCode": false,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "strictNullChecks": true
+  },
+  "compileOnSave": true,
+  "buildOnSave": true
 }
