--- a/package.json
+++ b/package.json
@@ -1,20 +1,7 @@
 {
   "name": "@cityssm/ntfy-publish",
   "version": "1.1.0",
-  "type": "module",
   "description": "A Node package to publish notifications to an ntfy server.",
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "exports": "./index.js",
-  "scripts": {
-    "test": "node --test",
-    "coverage": "c8 --reporter=lcov --reporter=text --reporter=text-summary node --test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cityssm/node-ntfy-publish.git"
-  },
   "keywords": [
     "ntfy",
     "notifications",
@@ -22,15 +9,28 @@
     "messages",
     "alerts"
   ],
-  "author": "The Corporation of the City of Sault Ste. Marie",
-  "license": "MIT",
+  "homepage": "https://github.com/cityssm/node-ntfy-publish#readme",
   "bugs": {
     "url": "https://github.com/cityssm/node-ntfy-publish/issues"
   },
-  "homepage": "https://github.com/cityssm/node-ntfy-publish#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cityssm/node-ntfy-publish.git"
+  },
+  "license": "MIT",
+  "author": "The Corporation of the City of Sault Ste. Marie",
+  "type": "module",
+  "exports": "./index.js",
+  "scripts": {
+    "coverage": "c8 --reporter=lcov --reporter=text --reporter=text-summary node --test",
+    "test": "node --test"
+  },
   "devDependencies": {
-    "@types/node": "^22.10.5",
-    "eslint-config-cityssm": "^18.3.0",
+    "@types/node": "^24.0.13",
+    "eslint-config-cityssm": "^26.0.0",
     "prettier-config-cityssm": "^1.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
